--- a/css/main.css
+++ b/css/main.css
@@ -19,36 +19,39 @@ body{
 /* --- INDEX HEADER --- */
 
 .header-container{
-    width: 65%;
+    width: 100%;
     height: auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin: auto;
-    padding: 0px 30px;
+    padding: 0px 5%;
+    box-sizing: border-box;
 }
 
 .logo{
     width: 25%;
-    margin-top: 0;
+    max-width: 200px; /* Establece un ancho máximo para el logo */
+    margin: 10px 0;
 }
 
 .logo img{
-    width: 230px;
-    height: 90px;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
     cursor: pointer;
     padding: 5px;
 }
 
 .search{
-    display: flex;
-    justify-content: center;
     width: 50%;
+    max-width: 400px; /* Establece un ancho máximo para el buscador */
+    flex: 1; /* Aprovecha el espacio disponible */
 }
 
 #searcher{
-    width: 60%;
-    margin: 10px;
+    width: 100%;
+    margin: 10px 0;
     padding: 10px 20px 10px 40px;
     background-image: url(../img/IconoBuscador.png);
     background-size: 20px;
@@ -56,6 +59,7 @@ body{
     background-position: 10px;
     border: 1px solid #ddd;
     border-radius: 30px;
+    box-sizing: border-box;
 }
 
 #searcher:focus{
@@ -64,21 +68,44 @@ body{
 }
 
 .social{
-    width: 20%;
+    width: 25%;
+    max-width: 200px; /* Establece un ancho máximo para los íconos sociales */
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px; /* Agrega margen superior */
 }
 
 .icons{
-    font-size: 1.85rem;
-    margin: auto;
+    font-size: 1.5rem; /* Ajusta el tamaño de los íconos */
     color: #3803A0;
-    margin: 0px 10px;
+    margin: 0px 5px;
 }
 
 .icons:hover{
     color: #ddd;
+}
+
+
+/* Media query para pantallas pequeñas */
+
+@media (max-width: 768px) {
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo,
+    .search,
+    .social {
+        width: 100%;
+        max-width: none;
+        margin: 20px 0;
+    }
+
+    #searcher {
+        max-width: none;
+    }
 }
 
 
@@ -90,36 +117,40 @@ body{
     width: 100%;
     height: 70vh;
     margin: auto;
-    background-image: linear-gradient(rgba(0, 0, 0,0.75), rgba(0, 0, 0,0.75)), url(../img/FondoInicio2.png);
-    background-size: 100% 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../img/FondoInicio2.png);
+    background-size: cover; /* Cambiamos el tamaño del fondo para que cubra todo el contenedor */
+    background-position: center; /* Centramos el fondo */
     background-repeat: no-repeat;
+    text-align: center; /* Centramos el contenido */
+    color: #fff;
 }
 
 .section-wrapper{
     width: 100%;
     position: absolute;
-    top: 45%;
-    transform: translateY(-55%);
+    top: 50%; /* Centramos verticalmente */
+    transform: translateY(-50%);
     text-align: center;
     color: #fff;
 }
 
 .section-wrapper h1{
-    font-size: 70px;
-    margin-top: 80px;
+    font-size: 4rem; /* Cambiamos a unidades relativas */
+    margin-top: 1rem; /* Cambiamos a unidades relativas */
 }
 
 .section-wrapper h2{
-    margin: 20px auto;
+    margin: 1rem auto; /* Cambiamos a unidades relativas */
     font-weight: 100;
-    line-height: 25px;
+    line-height: 1.4; /* Cambiamos a unidades relativas */
 }
 
 #button-products{
-    width: 200px;
+    width: 40%; /* Ajustamos el ancho para ser relativo al contenedor */
+    max-width: 200px; /* Establecemos un ancho máximo */
     padding: 15px 0;
     text-align: center;
-    margin: 20px 10px;
+    margin: 1rem auto; /* Cambiamos a unidades relativas */
     border-radius: 25px;
     font-weight: bold;
     border: 2px solid #ffbe0b;
@@ -151,6 +182,29 @@ body{
 }
 
 
+/* Media query para pantallas pequeñas */
+
+@media (max-width: 768px){
+    .main-container{
+        height: 60vh; /* Cambiamos la altura al 100% de la ventana */
+    }
+
+    .section-wrapper{
+        top: 85%; /* Centramos verticalmente */
+        transform: translateY(-15%);
+    }
+
+    .section-wrapper h1{
+        font-size: 3rem; /* Ajustamos el tamaño de fuente */
+    }
+
+    .section-wrapper h2{
+        font-size: 1.2rem; /* Ajustamos el tamaño de fuente */
+    }
+}
+
+
+
 
 
 /* --- INDEX FOOTER --- */
@@ -162,16 +216,16 @@ body{
 	height: 10vh;
 	justify-content: center;
     margin-top: 35px;
-    margin: auto;
+    margin: 15px auto;
 }
 
-@keyframes scroll {
+@keyframes scroll{
 	0% { transform: translateX(calc(250px * 2)); }
 	100% { transform: translateX(calc(-250px * 4))}
 }
 
 .section-brand{
-    background: red;
+    background: #ffff;
 	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
 	height: 80px;
 	margin: auto;
@@ -192,7 +246,7 @@ body{
 .brand-slide{
     height: 100px;
 	width: 250px;
-    margin: 0px 30px;
+    margin: 15px auto;
 }
 
 .img-brand{
@@ -207,8 +261,8 @@ body{
 
 .main-container-products{
     min-height: 100vh;
-    width: 100%;
-    margin: 0 4em;
+    width: 90%;
+    margin: auto;
 }
 
 .section-publicity{
@@ -218,7 +272,7 @@ body{
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
-    border-radius: 10px;
+    border-radius: 5px;
     border: 2px solid rgba(255, 255, 255, .5);
     border: none;
     margin: 50px 0;
@@ -230,6 +284,151 @@ body{
 .section-publicity h2{
     position: relative;
     top: 25 0px;
-    color: silver;
-    font-size: 3rem;
+    color: #ffbe0b;
+    font-size: 3.5rem;
+    font-weight: 900;
+}
+
+.menu-title{
+    text-align: center;
+    margin: 2.5rem 0;
+    color: #F0A502;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.buttons{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2.5rem;
+}
+
+.filter-btn{
+    background-color: transparent;
+    color: #F0A502;
+    border: 1px solid #F0A502;
+    padding: 0.375rem 0.75rem;
+    margin: 0 0.5rem;
+    letter-spacing: 0.05rem;
+    outline: none;
+    transition: all 0.3s linear;
+    font-weight: 600;
+}
+
+.filter-btn:hover, .filter-btn:focus{
+    background-color: #F0A502;
+    color: #ffffff;
+}
+
+#products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+
+.product-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    flex: 0 0 30%;
+    margin-bottom: 2rem;
+    padding: 20px;
+    transform: scale(0.9);
+    transition: all 500ms ease-in-out;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12),
+    0 3px 1px -5px rgba(0, 0, 0, 0.2);
+    opacity: 0.85;
+    border-radius: 10px;
+}
+
+.product-container:hover{
+    transform: scale(0.9);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px 0 rgba(0, 0, 0, 0.22);
+}
+
+.product-image{
+    opacity: 0.9;
+    margin-top: 40px;
+    transition: all 500ms ease-in-out;
+    transform: scale(0.9);
+}
+
+.product-image:hover{
+    transform: scale(1);
+}
+
+.product-image img{
+    width: 400px;
+    height: 400px;
+}
+
+.product-info header{
+    padding: 25px 15px 0 0;
+    border-bottom: 0.5px dotted #617d98;
+    text-align: center;
+    /*background-color: #961818;*/
+}
+
+.product-info h4{
+    margin-bottom: 0.5rem;
+}
+
+.main-color{
+    color: #fc6622;
+}
+
+.product-price{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.price-normal{
+    padding: 5px;
+    margin-right: 20px;
+    color: #3b3847;
+    border-radius: 20%;
+}
+
+.price-online{
+    padding: 5px;
+    margin-left: 20px;
+    color: #ffffff;
+    background-color: #0E2F7F;
+    border-radius: 15%;
+}
+
+.whatsappButton{
+    background-color: #FF5229;
+    color: #ffffff;
+    border: 1px solid #FF5229;
+    padding: 0.375rem 0.75rem;
+    margin: 0 0.5rem;
+    letter-spacing: 0.03rem;
+    outline: none;
+    font-weight: 500;
+    font-size: 1rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+
+
+
+
+/* PRODUCTOS FOOTER */
+
+.footer-container{
+    height: 85px;
+    background-color: #F0A502;
+    opacity: 0.9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
