--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ body{
 
 /* PRODUCTOS FOOTER */
 
-.footer-container{
+.footer-container-products{
     height: 85px;
     background-color: #F0A502;
     opacity: 0.9;
