--- a/css/style.css
+++ b/css/style.css
@@ -265,20 +265,33 @@ body{
     margin: auto;
 }
 
-.section-publicity{
+.section-publicity {
     opacity: 0.8;
-    height: 100vh;
-    background-image: url("../img/FondoWrapper.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
+    position: relative;
+    height: 80vh;
     border-radius: 5px;
-    border: 2px solid rgba(255, 255, 255, .5);
+    overflow: hidden;
+    border: 2px solid rgba(255, 255, 255, 0.5);
     border: none;
     margin: 50px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+.section-publicity__text > em {
+    text-wrap: balance;
+    font-size: clamp(1.5rem, 15vw - 1.5rem, 5rem);
+    padding-inline: 1rem;
+}
+
+.section-publicity__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
 }
 
 .section-publicity h2{
